mongodb-commands.txt
##########################################################

test> show dbs
admin    40.00 KiB
config  108.00 KiB
local    88.00 KiB
test> use viswa
switched to db viswa
viswa> show dbs
admin    40.00 KiB
config  108.00 KiB
local    88.00 KiB
viswa> db.axel.insert("{"name":"viswa"}")
Uncaught:
SyntaxError: Unexpected token, expected "," (1:18)

> 1 | db.axel.insert("{"name":"viswa"}")
    |                   ^
  2 |

viswa> db.axel.insert({"name":"viswa"})
DeprecationWarning: Collection.insert() is deprecated. Use insertOne, insertMany, or bulkWrite.
{
  acknowledged: true,
  insertedIds: { '0': ObjectId('6707585c622ca43f8186b01d') }
}
viswa> show dbs
admin    40.00 KiB
config  108.00 KiB
local    88.00 KiB
viswa     8.00 KiB
viswa> db.axel.find()
[ { _id: ObjectId('6707585c622ca43f8186b01d'), name: 'viswa' } ]
viswa> show dbs
admin    40.00 KiB
config  108.00 KiB
local    88.00 KiB
viswa    40.00 KiB
viswa> show dbs
admin    40.00 KiB
config  108.00 KiB
local    88.00 KiB
viswa    40.00 KiB
viswa> use test
switched to db test
test> show collections

test> db.hepl()
TypeError: db.hepl is not a function
test> db.help()

##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################
##########################################################